--- a/index.html
+++ b/index.html
@@ -187,6 +187,46 @@
       </div>
     </div>
   </section>
+<!-- Projects Section -->
+<section id="projects">
+  <h3>Projects</h3>
+  <div class="project-grid">
 
+    <!-- Project 1 -->
+    <div class="project-card">
+      <h4>🧠 Healthcare Chatbot with LLM</h4>
+      <p>Built an intelligent chatbot using LangChain + LLaMA 2 for medical FAQs. Integrated with Pinecone for vector search and deployed with FastAPI.</p>
+      <p><strong>Tech Stack:</strong> LangChain, LLaMA 2, FastAPI, Pinecone</p>
+      <div class="project-links">
+        <a href="https://github.com/yourusername/healthcare-chatbot" target="_blank">GitHub</a>
+        <a href="#" target="_blank">Live Demo</a>
+      </div>
+    </div>
+
+    <!-- Project 2 -->
+    <div class="project-card">
+      <h4>📈 Resume Screening using BERT</h4>
+      <p>Fine-tuned BERT model to automatically rank resumes based on job descriptions. Achieved 92% accuracy and deployed as an internal HR tool.</p>
+      <p><strong>Tech Stack:</strong> BERT, Hugging Face, Streamlit, MLflow</p>
+      <div class="project-links">
+        <a href="https://github.com/yourusername/resume-bert" target="_blank">GitHub</a>
+        <a href="#" target="_blank">Live Demo</a>
+      </div>
+    </div>
+
+    <!-- Project 3 -->
+    <div class="project-card">
+      <h4>👁️ Face Recognition Attendance System</h4>
+      <p>Developed a computer vision-based attendance system using OpenCV + Deep Learning. Detects and logs attendance in real time via webcam.</p>
+      <p><strong>Tech Stack:</strong> Python, OpenCV, TensorFlow, Streamlit</p>
+      <div class="project-links">
+        <a href="https://github.com/yourusername/face-attendance" target="_blank">GitHub</a>
+        <a href="#" target="_blank">Live Demo</a>
+      </div>
+    </div>
+
+  </div>
+</section>
+  
 </body>
 </html>
