--- a/index.html
+++ b/index.html
@@ -117,6 +117,57 @@
         flex-direction: column;
       }
     }
+    #projects {
+  padding: 60px 20px;
+  max-width: 1000px;
+  margin: auto;
+}
+
+.project-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 2rem;
+  margin-top: 30px;
+}
+
+.project-card {
+  background-color: #2d2b4d;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.05);
+  transition: transform 0.3s ease;
+}
+
+.project-card:hover {
+  transform: translateY(-5px);
+}
+
+.project-card h4 {
+  margin-bottom: 10px;
+  color: #ffd700;
+}
+
+.project-card p {
+  font-size: 0.95rem;
+  margin-bottom: 10px;
+}
+
+.project-links a {
+  text-decoration: none;
+  color: #1f1c2c;
+  background: #ffd700;
+  padding: 6px 14px;
+  border-radius: 20px;
+  font-size: 0.9rem;
+  font-weight: bold;
+  margin-right: 10px;
+  transition: background 0.2s ease;
+}
+
+.project-links a:hover {
+  background: white;
+}
+    
   </style>
 </head>
 <body>
