--- a/index.html
+++ b/index.html
@@ -278,6 +278,43 @@
 
   </div>
 </section>
+ <!-- Skills Section -->
+<section id="skills">
+  <h3>Skills</h3>
+  <div class="skills-container">
+
+    <div class="skill-block">
+      <h4>Machine Learning</h4>
+      <div class="skill-bar"><div class="bar" style="width: 90%;">Regression, Classification, Clustering</div></div>
+    </div>
+
+    <div class="skill-block">
+      <h4>Deep Learning</h4>
+      <div class="skill-bar"><div class="bar" style="width: 85%;">CNN, RNN, Transformers, GANs</div></div>
+    </div>
+
+    <div class="skill-block">
+      <h4>NLP & LLMs</h4>
+      <div class="skill-bar"><div class="bar" style="width: 88%;">BERT, LLaMA, LangChain, Summarization</div></div>
+    </div>
+
+    <div class="skill-block">
+      <h4>DevOps & Deployment</h4>
+      <div class="skill-bar"><div class="bar" style="width: 80%;">Docker, FastAPI, Streamlit, GitHub Actions</div></div>
+    </div>
+
+    <div class="skill-block">
+      <h4>Experiment Tracking</h4>
+      <div class="skill-bar"><div class="bar" style="width: 75%;">MLflow, Weights & Biases</div></div>
+    </div>
+
+    <div class="skill-block">
+      <h4>Cloud & Platforms</h4>
+      <div class="skill-bar"><div class="bar" style="width: 85%;">AWS, GCP, Vertex AI, Hugging Face</div></div>
+    </div>
+
+  </div>
+</section>
   
 </body>
 </html>
