--- a/index.html
+++ b/index.html
@@ -167,6 +167,51 @@
 .project-links a:hover {
   background: white;
 }
+ #skills {
+  padding: 60px 20px;
+  max-width: 1000px;
+  margin: auto;
+}
+
+.skills-container {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  margin-top: 30px;
+}
+
+.skill-block h4 {
+  color: #ffd700;
+  margin-bottom: 8px;
+}
+
+.skill-bar {
+  background-color: #3b3760;
+  border-radius: 25px;
+  overflow: hidden;
+  height: 30px;
+}
+
+.bar {
+  height: 100%;
+  background-color: #ffd700;
+  color: #1f1c2c;
+  text-align: left;
+  padding-left: 15px;
+  line-height: 30px;
+  font-weight: bold;
+  border-radius: 25px 0 0 25px;
+  animation: fillBar 2s ease-in-out;
+}
+
+@keyframes fillBar {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
     
   </style>
 </head>
