--- a/index.html
+++ b/index.html
@@ -360,6 +360,21 @@
 
   </div>
 </section>
+<!-- Resume Section -->
+<section id="resume">
+  <h3>Resume</h3>
+
+  <!-- Download Resume Button -->
+  <div class="resume-buttons">
+    <a href="Ankit_Gupta_AI_Resume.pdf" download>📄 Download Resume (PDF)</a>
+    <a href="#view-resume">👁️ View Online</a>
+  </div>
+
+  <!-- Embedded Resume Viewer -->
+  <div id="view-resume" class="resume-preview">
+    <iframe src="Ankit_Gupta_AI_Resume.pdf" width="100%" height="600px" frameborder="0"></iframe>
+  </div>
+</section>
   
 </body>
 </html>
