--- a/index.html
+++ b/index.html
@@ -212,6 +212,39 @@
     width: 100%;
   }
 }
+ #resume {
+  padding: 60px 20px;
+  max-width: 1000px;
+  margin: auto;
+  text-align: center;
+}
+
+.resume-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  flex-wrap: wrap;
+  margin-bottom: 30px;
+}
+
+.resume-buttons a {
+  text-decoration: none;
+  padding: 0.75rem 1.5rem;
+  background-color: #ffd700;
+  color: #1f1c2c;
+  border-radius: 30px;
+  font-weight: bold;
+  transition: all 0.3s ease;
+}
+
+.resume-buttons a:hover {
+  background-color: white;
+}
+
+.resume-preview iframe {
+  border: 2px solid #ffd700;
+  border-radius: 10px;
+}
     
   </style>
 </head>
