--- a/index.html
+++ b/index.html
@@ -408,6 +408,37 @@
     <iframe src="Ankit_Gupta_AI_Resume.pdf" width="100%" height="600px" frameborder="0"></iframe>
   </div>
 </section>
+ <!-- Certificates Section -->
+<section id="certificates">
+  <h3>Certificates</h3>
+  <div class="certificates-grid">
+
+    <div class="certificate-card">
+      <h4>✅ DeepLearning.ai – AI Specialization</h4>
+      <p>Mastered supervised learning, neural networks, and hyperparameter tuning with Andrew Ng.</p>
+      <a href="https://coursera.org/verify/example" target="_blank">View Certificate</a>
+    </div>
+
+    <div class="certificate-card">
+      <h4>✅ Hugging Face – Transformers Course</h4>
+      <p>Learned how to fine-tune and deploy transformer models for NLP and LLM tasks.</p>
+      <a href="https://huggingface.co/cert/example" target="_blank">View Certificate</a>
+    </div>
+
+    <div class="certificate-card">
+      <h4>✅ Google Cloud – ML Engineer Track</h4>
+      <p>Built end-to-end ML pipelines, used AutoML and GCP tools for production ML systems.</p>
+      <a href="https://google.com/certificate/example" target="_blank">View Certificate</a>
+    </div>
+
+    <div class="certificate-card">
+      <h4>✅ AWS – AI & ML Certification</h4>
+      <p>Worked with AWS SageMaker, data pipelines, and deployed models at scale using AWS tools.</p>
+      <a href="https://aws.amazon.com/certification/example" target="_blank">View Certificate</a>
+    </div>
+
+  </div>
+</section>
   
 </body>
 </html>
