--- a/index.html
+++ b/index.html
@@ -245,6 +245,56 @@
   border: 2px solid #ffd700;
   border-radius: 10px;
 }
+    #certificates {
+  padding: 60px 20px;
+  max-width: 1000px;
+  margin: auto;
+}
+
+.certificates-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 2rem;
+  margin-top: 30px;
+}
+
+.certificate-card {
+  background-color: #2d2b4d;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.05);
+  transition: transform 0.3s ease;
+}
+
+.certificate-card:hover {
+  transform: translateY(-5px);
+}
+
+.certificate-card h4 {
+  margin-bottom: 10px;
+  color: #ffd700;
+}
+
+.certificate-card p {
+  font-size: 0.95rem;
+  margin-bottom: 10px;
+  color: #ddd;
+}
+
+.certificate-card a {
+  text-decoration: none;
+  color: #1f1c2c;
+  background: #ffd700;
+  padding: 6px 14px;
+  border-radius: 20px;
+  font-size: 0.9rem;
+  font-weight: bold;
+  transition: background 0.2s ease;
+}
+
+.certificate-card a:hover {
+  background: white;
+}
     
   </style>
 </head>
