--- a/index.html
+++ b/index.html
@@ -489,6 +489,26 @@
 
   </div>
 </section>
+  <!-- Contact Section -->
+<section id="contact">
+  <h3>Contact Me</h3>
+  <p>If you're hiring, collaborating, or just want to say hi – feel free to reach out!</p>
+
+  <div class="contact-details">
+    <p>📧 Email: <a href="mailto:ankit.aiengineer@example.com">ankit.aiengineer@example.com</a></p>
+    <p>💼 LinkedIn: <a href="https://linkedin.com/in/ankit95gupta" target="_blank">linkedin.com/in/ankit95gupta</a></p>
+    <p>👨‍💻 GitHub: <a href="https://github.com/ankit95gupta" target="_blank">github.com/ankit95gupta</a></p>
+  </div>
+
+  <form class="contact-form" onsubmit="sendMessage(event)">
+    <input type="text" placeholder="Your Name" required />
+    <input type="email" placeholder="Your Email" required />
+    <textarea rows="5" placeholder="Your Message" required></textarea>
+    <button type="submit">Send Message</button>
+  </form>
+
+  <p id="form-status"></p>
+</section>
   
 </body>
 </html>
