--- a/index.html
+++ b/index.html
@@ -295,6 +295,63 @@
 .certificate-card a:hover {
   background: white;
 }
+   #contact {
+  padding: 60px 20px;
+  max-width: 800px;
+  margin: auto;
+  text-align: center;
+}
+
+#contact a {
+  color: #ffd700;
+  text-decoration: none;
+}
+
+.contact-details p {
+  margin: 10px 0;
+  font-size: 1rem;
+}
+
+.contact-form {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  align-items: center;
+}
+
+.contact-form input,
+.contact-form textarea {
+  width: 100%;
+  max-width: 600px;
+  padding: 12px;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+}
+
+.contact-form button {
+  background: #ffd700;
+  color: #1f1c2c;
+  padding: 12px 30px;
+  border: none;
+  border-radius: 30px;
+  font-size: 1rem;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+.contact-form button:hover {
+  background: white;
+}
+
+#form-status {
+  margin-top: 20px;
+  font-weight: bold;
+  color: #00ffcc;
+}
     
   </style>
 </head>
